# workwright

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  VISION.md  hub.py  ww.py
.workwright/: changelog.jsonl  locks.json  tasks.jsonl  taste.jsonl  taste_patterns.json
crates/ww-cli/: Cargo.toml
crates/ww-cli/src/: main.rs
crates/ww-server/: Cargo.toml
crates/ww-server/src/: main.rs
crates/ww-workspace/: Cargo.toml
crates/ww-workspace/src/: change.rs  db.rs  error.rs  lib.rs  lock.rs  staging.rs  task.rs  taste.rs  workspace.rs
crates/ww-wright/: Cargo.toml
crates/ww-wright/src/: lib.rs  llm.rs  wright.rs
docs/: MEDIA_API_LAYER.md
server/: app.py
site/: about.html  brief.html  crit.html  index.css  index.html  index.js  register.html  styles.css
src/: __init__.py  commands.py  evaluate.py  task.py  taste.py  users.py  workspace.py  wright.py
