[package]
name = "ww-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ww-server"
path = "src/main.rs"

[dependencies]
ww-workspace = { path = "../ww-workspace" }
ww-wright = { path = "../ww-wright" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
